--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 spring.application.name=femcodersmentorhub
+
+spring.output.ansi.enabled=ALWAYS
+spring.config.import=optional:file:.env[.properties]
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
+
+#spring.sql.init.mode=always
+spring.jpa.hibernate.ddl-auto=create-drop
+#spring.datasource.initialization-mode=always
+#spring.jpa.defer-datasource-initialization=true
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+server.port=${SERVER_PORT}
