--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,4 +15,6 @@ spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.springframework.security=DEBUG
+logging.level.io.jsonwebtoken=DEBUG
 server.port=${SERVER_PORT}
