--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,10 +8,10 @@ spring.datasource.password=${DB_PASSWORD}
 jwt.secret.key=${JWT_SECRET_KEY}
 jwt.expiration=${JWT_EXPIRATION:1800000}
 
-#spring.sql.init.mode=always
+spring.sql.init.mode=always
 spring.jpa.hibernate.ddl-auto=create-drop
-#spring.datasource.initialization-mode=always
-#spring.jpa.defer-datasource-initialization=true
+spring.datasource.initialization-mode=always
+spring.jpa.defer-datasource-initialization=true
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
