--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,34 @@
 spring.application.name=femcodersmentorhub
 
+# Database Configuration
 spring.output.ansi.enabled=ALWAYS
 spring.config.import=optional:file:.env[.properties]
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
+
+# Jwt Configuration
 jwt.secret.key=${JWT_SECRET_KEY}
 jwt.expiration=${JWT_EXPIRATION:1800000}
 
+# MailHog Configuration
+spring.mail.host=localhost
+spring.mail.port=1025
+spring.mail.username=
+spring.mail.password=
+spring.mail.properties.mail.smtp.auth=false
+spring.mail.properties.mail.smtp.starttls.enable=false
+
+# Jpa/Hibernate Configuration
 spring.sql.init.mode=always
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.datasource.initialization-mode=always
 spring.jpa.defer-datasource-initialization=true
-
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+# Logging Configuration
 logging.level.org.springframework.security=DEBUG
 logging.level.io.jsonwebtoken=DEBUG
+
+# Server Configuration
 server.port=${SERVER_PORT}
