feat(pom.xml, app.properties, app-docker.properties, Dockerfile,docker-compose, SecurityConfig): add docker configuration with healthcheck and actuator

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=femcodersmentorhub
 
 # Database Configuration
 spring.output.ansi.enabled=ALWAYS
-spring.config.import=optional:file:.env[.properties]
+spring.config.import=optional:file:.env.local[.properties]
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
@@ -32,6 +32,9 @@ logging.level.org.springframework.security=DEBUG
 logging.level.io.jsonwebtoken=DEBUG
 logging.level.com.fcmh.femcodersmentorhub=DEBUG
 
+# Healthcheck Configuration
+management.endpoints.web.exposure.include=health
+management.endpoint.health.show-details=always
 
 # Server Configuration
 server.port=${SERVER_PORT}
