--- a/pom.xml
+++ b/pom.xml
@@ -135,4 +135,13 @@
 		</plugins>
 	</build>
 
+	<profiles>
+		<profile>
+			<id>test</id>
+			<build>
+				<directory>/tmp/build</directory>
+			</build>
+		</profile>
+	</profiles>
+
 </project>
