--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -10,3 +10,6 @@ spring.jpa.properties.hibernate.format_sql=false
 
 spring.sql.init.mode=never
 
+spring.mail.host=mailhog
+spring.mail.port=1025
+spring.mail.test-connection=true
