fix(application-test.properties): add JWT properties for test profile

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -13,3 +13,6 @@ spring.sql.init.mode=never
 spring.mail.host=mailhog
 spring.mail.port=1025
 spring.mail.test-connection=true
+
+jwt.secret=test-secret-key-for-integration-tests-only
+jwt.expiration=1800000
