--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,6 +18,15 @@ jobs:
       - name: Run tests with docker-compose
         run: docker compose -f docker-compose-test.yml up --quiet-pull --abort-on-container-exit --exit-code-from fcmh-test
 
+      - name: Show detailed test results on failure
+        if: failure()
+        run: |
+            echo "📋 === LOGS DE CONTENEDOR ==="
+            docker compose -f docker-compose-test.yml logs fcmh-test
+            echo ""
+            echo "📋 === SUREFIRE REPORTS ==="
+            docker run --rm -v $(pwd):/workspace ubuntu:latest find /workspace -name "*.txt" -path "*/surefire-reports/*" -exec echo "=== {} ===" \; -exec cat {} \;
+
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
