fix(application-test.properties): disable SpringDoc in test profile to prevent CI failures

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -16,3 +16,7 @@ spring.mail.test-connection=true
 
 jwt.secret=test-secret-key-for-integration-tests-only
 jwt.expiration=1800000
+
+springdoc.api-docs.enabled=false
+springdoc.swagger-ui.enabled=false
+management.endpoints.web.exposure.include=health
