--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -17,6 +17,8 @@ spring.mail.test-connection=true
 jwt.secret=test-secret-key-for-integration-tests-only
 jwt.expiration=1800000
 
+management.endpoints.enabled=false
+management.endpoint.health.enabled=true
+management.health.defaults.enabled=false
 springdoc.api-docs.enabled=false
 springdoc.swagger-ui.enabled=false
-management.endpoints.web.exposure.include=health
