fix(application-test.properties): disable SpringDoc + Actuator in test profile to prevent CI failures

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -17,8 +17,4 @@ spring.mail.test-connection=true
 jwt.secret=test-secret-key-for-integration-tests-only
 jwt.expiration=1800000
 
-management.endpoints.enabled=false
-management.endpoint.health.enabled=true
-management.health.defaults.enabled=false
-springdoc.api-docs.enabled=false
-springdoc.swagger-ui.enabled=false
+spring.autoconfigure.exclude=org.springframework.boot.actuate.autoconfigure.web.server.ManagementContextAutoConfiguration,org.springdoc.core.configuration.SpringDocConfiguration
