fix(application-test.properties): disable SpringDoc + Actuator in test profile to prevent CI failures

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -17,4 +17,8 @@ spring.mail.test-connection=true
 jwt.secret=test-secret-key-for-integration-tests-only
 jwt.expiration=1800000
 
-spring.autoconfigure.exclude=org.springframework.boot.actuate.autoconfigure.web.server.ManagementContextAutoConfiguration,org.springdoc.core.configuration.SpringDocConfiguration
+spring.autoconfigure.exclude=org.springdoc.webmvc.core.configuration.MultipleOpenApiSupportConfiguration,org.springframework.boot.actuate.autoconfigure.web.server.ManagementContextAutoConfiguration
+
+springdoc.api-docs.enabled=false
+springdoc.swagger-ui.enabled=false
+springdoc.auto-configuration.enabled=false
