--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -12,13 +12,7 @@ spring.sql.init.mode=never
 
 spring.mail.host=mailhog
 spring.mail.port=1025
-spring.mail.test-connection=true
+spring.mail.test-connection=false
 
-jwt.secret=test-secret-key-for-integration-tests-only
+jwt.secret.key=12345678901234567890123456789012345678901234567890123456789
 jwt.expiration=1800000
-
-spring.autoconfigure.exclude=org.springdoc.webmvc.core.configuration.MultipleOpenApiSupportConfiguration,org.springframework.boot.actuate.autoconfigure.web.server.ManagementContextAutoConfiguration
-
-springdoc.api-docs.enabled=false
-springdoc.swagger-ui.enabled=false
-springdoc.auto-configuration.enabled=false
