--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -16,3 +16,5 @@ spring.mail.test-connection=false
 
 jwt.secret.key=12345678901234567890123456789012345678901234567890123456789
 jwt.expiration=1800000
+
+server.port=${SERVER_PORT}
