--- a/docker-compose-test.yml
+++ b/docker-compose-test.yml
@@ -16,6 +16,7 @@ services:
 
     environment:
        - SPRING_PROFILES_ACTIVE=test
+       - JWT_SECRET_KEY=docker-compose-test
 
     restart: no
 
