--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -18,3 +18,6 @@ jwt.secret.key=12345678901234567890123456789012345678901234567890123456789
 jwt.expiration=1800000
 
 server.port=${SERVER_PORT}
+
+springdoc.api-docs.enabled=false
+springdoc.swagger-ui.enabled=false
