--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -17,7 +17,11 @@ spring.mail.test-connection=false
 jwt.secret.key=12345678901234567890123456789012345678901234567890123456789
 jwt.expiration=1800000
 
-server.port=${SERVER_PORT}
+server.port=0
 
 springdoc.api-docs.enabled=false
 springdoc.swagger-ui.enabled=false
+
+logging.level.root=WARN
+logging.level.org.springframework=WARN
+logging.level.org.hibernate=WARN
